# hrm_crawl_bds

./: .dockerignore  .gitignore  Dockerfile  api_app.py  bds  bds.bat  bds.py  build_embeddings.py  check_stats.py  db.py  docker-compose.yml  facebook_group_scraper.py  facebook_groups.txt  facebook_groups.txt.example  init_db.py  llm_enricher.py  pyproject.toml  requirements.txt  schema.sql  search_semantic.py  vectorizer.py
docs/: 01-requirements.md  02-setup-macos.md  03-setup-windows.md  04-setup-docker.md  05-deploy-vps-docker-centos7.md  CRON_SETUP.md  README.md  zca-document.md
migrations/: 0001_initial.sql  0002_cookies_and_groups.sql  __init__.py  add_classification_fields.sql  run.py
services/: __init__.py  analysis.py  llm.py  metrics.py  posts.py  telegram.py  text_utils.py  zalo.py
templates/: index.html
zalo/: zalo_send.js
