[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "bds-agent"
version = "1.0.0"
description = "BDS Agent — Facebook crawler + LLM enrichment + Telegram notifications"
requires-python = ">=3.10"
dependencies = []

[project.scripts]
bds = "bds:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["bds"]
